--- a/app/views/events/_content.html.erb
+++ b/app/views/events/_content.html.erb
@@ -1,5 +1,5 @@
 
-  <div class="Ch_grid">
+  <div class="Ch_grid clearfix">
     <div class="Ch_grid-item new men brown">
       <img src="https://cdn.shopify.com/s/files/1/1196/9896/collections/Iphone_SmartWatch_1_8ac8d0c3-f3ea-4a25-84fd-f57b230d6096_580x.jpg?v=1503340748" alt="" />
       <h4 class="item-name">Men's Nylon Slipper</h4>
@@ -7,6 +7,16 @@
     </div>
     <div class="Ch_grid-item new men red">
       <img src="https://www.livemint.com/rf/Image-621x414/LiveMint/Period2/2018/04/20/Photos/Processed/coverimage-NintendoSwitch-k9XD--621x414@LiveMint.jpg" alt="" />
+      <h4 class="item-name">Men's Nylon Slipper</h4>
+      <h5 class="item-price">$150</h5>
+    </div>
+    <div class="Ch_grid-item new men red">
+      <img src="http://static.wixstatic.com/media/51509e_d96f3cfb33b943959e52da417b06afaa.jpg_srz_p_501_334_75_22_0.50_1.20_0.00_jpg_srz" alt="" />
+      <h4 class="item-name">Men's Nylon Slipper</h4>
+      <h5 class="item-price">$150</h5>
+    </div>
+    <div class="Ch_grid-item new men red">
+      <img src="https://cdn-image.travelandleisure.com/sites/default/files/styles/1600x1000/public/1507061835/bose-wireless-headphones-EPTRAVELTECH1017.jpg?itok=DBVpC9uY" alt="" />
       <h4 class="item-name">Men's Nylon Slipper</h4>
       <h5 class="item-price">$150</h5>
     </div>
