--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,6 +1,10 @@
 @import url(font-awesome.min.css);
 @import "https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Oswald:700";
 
+.clearfix:after{display:block;clear:both;content:"";visibility:hidden;height:0;}
+.clearfix:{display:block;}
+.layout{min-width:1200px;width:100%;overflow:hidden;position:relative;}
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
