--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
   <%= render 'events/event.js' %>
 
   <!-- VigLink Begin -->
-  <script type="text/javascript">
+<!--   <script type="text/javascript">
     var vglnk = {key: '9f8b8215c45eaf9e20303d2bf9cb410c'};
     (function(d, t) {
         var s = d.createElement(t);
@@ -55,7 +55,7 @@
         var r = d.getElementsByTagName(t)[0];
             r.parentNode.insertBefore(s, r);
     }(document, 'script'));
-  </script>
+  </script> -->
   <!-- VigLink End -->
 
 </body>
