--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -5,6 +5,10 @@
 /* ---------------------------------------------
    Index Page
  --------------------------------------------- */
+
+
+.intro{display:none;}
+
 .source_index {
   color: #999;
  }
