--- a/app/views/posts/_sidebar.html.erb
+++ b/app/views/posts/_sidebar.html.erb
@@ -6,7 +6,7 @@
       <h3>AMAZON QUICK SEARCH</h3>
       <section data-group="modal-group">
         <div class="container">
-          <a href="#" class="image fit"><img src="https://pmcvariety.files.wordpress.com/2018/01/amazon-logo.jpg?w=1000" alt=""></a>
+          <a target="_blank" href="https://amzn.to/2Dlw6RO" class="image fit"><img src="https://pmcvariety.files.wordpress.com/2018/01/amazon-logo.jpg?w=1000" alt=""></a>
           <p>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon.</p>
           <a class="button btn-px open-modal" data-modal="modal">Quick Search</a>
           <div class="modal-wrapper" data-wrapper="modal-wrapper-large">
