--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -133,14 +133,14 @@
 }
 .card {
   /* width: calc(33.3% - 1.6rem); */
-  width: 25%;
+  width: 31.33%;
   /* margin: 0.8rem; */
   /* width: calc(26% - 1.6rem); */
-  margin-bottom: 1em;
+  margin:1em 1% 0 1%;
   background: #fff;
   overflow: hidden;
   border-radius: .5rem;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 2px 5px rgba(0, 0, 0, 0.05);
+  /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 2px 5px rgba(0, 0, 0, 0.05); */
   transition: box-shadow 300ms;
 }
 
@@ -157,7 +157,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   padding: 0.5em;
 }
 .card--content {
