--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
 
   <!-- eBay Network Partner -->
-  <script>window._epn = {campaign:5338397259};</script>
-  <script src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
+  <!-- <script>window._epn = {campaign:5338397259};</script>
+  <script src="https://epnt.ebay.com/static/epn-smart-tools.js"></script> -->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113637704-1"></script>
