--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -61,11 +61,7 @@
                         </div>
                       <% end %>
                       
-                    <!--
-                      <div class="index_button">
-                       <a class="button fit" target="_blank" href="<%= post.post_link %>">Check it Out</a>
-                       <a class="button primary fit" href="posts/<%= post.id %>">See More Detail</a>
-                      </div>
+     
                     -->
                     </div>          
                   </div>
@@ -77,7 +73,7 @@
            
 
             
-        </section><!-- /.main -->
+        <!-- </section>/.main -->
 
       <!-- Sidebar -->
       <%= render 'posts/sidebar' %>
