--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -1,4 +1,7 @@
-<%= render 'coming_soon/coming_soon' %>
+<div class="soon_wraper">
+    <h1>coming soon</h1>
+</div>
+
 <div class="none">
   <header id="header">
     <%= render 'dealzons/navbar' %> 
