--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,8 +1,8 @@
-<!-- <div class="soon_wraper">
+<div class="soon_wraper">
     <h1>coming soon</h1>
-</div> -->
+</div>
 
-<div class="">
+<div class="none">
   <header id="header">
     <%= render 'posts/navbar' %> 
   </header>
