--- a/app/assets/stylesheets/coming_soon.css
+++ b/app/assets/stylesheets/coming_soon.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -21,10 +21,6 @@ h1 {
     text-transform: uppercase;
     font-size: 10em;
     margin: 0;
-    /* background-image: linear-gradient(to right, #000000 0%, #000000 50%, #FFFFFF 50%, #FFFFFF 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; */
     color: white;
     mix-blend-mode: difference;
     border-top:5px solid;
@@ -32,4 +28,4 @@ h1 {
     display:inline-block;
 }
 
-.none{display:none;}
+.none{display:none;}*/
